# control

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  PRODUCT.md  build_dependencies.sh  cov_build.sh
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: native_full_build.yml
ci/: build_dependencies.sh  cov_build.sh
ci/mocks/: Iarm.h  Rfc.h  Telemetry.h  devicesettings.h  devicesettings_ctrlm.patch  mfrTypes.h  safec_lib.h  secure_wrappermock.h  testframework_overrides.h  xlog_ci_compat.h
ci/mocks/control/: comcastIrKeyCodes.h  irMgr.h  rdkx_logger.h  xr_fdc.h  xr_mq.h  xr_timestamp.h  xr_voice_sdk.h  xraudio.h  xrsr.h  xrsv_http.h  xrsv_ws_nextgen.h
ci/mocks/devicesettings/: AudioOutputPortMock.h  AudioOutputPortTypeMock.h  AudioStereoModeMock.h  ColorMock.h  CompositeInputMock.h  DisplayMock.h  DrmMock.h  EdidParserMock.h  FloatingRtFunctionsMock.h  FrontPanelConfigMock.h  FrontPanelIndicatorMock.h  HostMock.h  (+15 more)
ci/patches/: 00010-R4.4-Add-support-for-project-dir.patch  1004-Add-support-for-project-dir.patch  RDKEMW-733-Add-ENTOS-IDS.patch  Use_Legact_Alt_Based_On_ThunderTools_R4.4.3.patch  error_code_R4_4.patch
doxygen/: build_docs.py  ctrlm_api_hal_rf4ce  ctrlm_api_ipc  ctrlm_api_ipc_device_update  ctrlm_api_ipc_rcu  ctrlm_api_ipc_voice
include/: ctrlm_hal.h  ctrlm_hal_ble.h  ctrlm_hal_rf4ce.h  ctrlm_ipc.h  ctrlm_ipc_ble.h  ctrlm_ipc_rcu.h  ctrlm_ipc_voice.h
src/: CMakeLists.txt  ctrlm.h  ctrlm_config_default.json  ctrlm_controller.cpp  ctrlm_controller.h  ctrlm_device_update.cpp  ctrlm_device_update.h  ctrlm_device_update_iarm.cpp  ctrlm_ir_controller.cpp  ctrlm_ir_controller.h  ctrlm_log.h  ctrlm_main.cpp  ctrlm_main_iarm.cpp  ctrlm_main_powermanager.cpp  ctrlm_main_powermanager.h  ctrlm_network.cpp  ctrlm_network.h  ctrlm_powermanager.h  ctrlm_powermanager_factory.cpp  ctrlm_rcu.cpp  ctrlm_rcu.h  ctrlm_rcu_iarm.cpp  ctrlm_recovery.cpp  ctrlm_recovery.h  ctrlm_rf4ce_voice_packet_analysis.cpp  ctrlm_tr181.cpp  ctrlm_tr181.h  ctrlm_utils.cpp  ctrlm_utils.h  ctrlm_validation.cpp  ctrlm_validation.h  ctrlm_vendor_network_factory.cpp  ctrlm_vendor_network_factory.h  ctrlm_voice_packet_analysis.h  json_config.cpp  json_config.h
src/asb/: ctrlm_asb.h
src/attributes/: ctrlm_attr.cpp  ctrlm_attr.h  ctrlm_attr_general.cpp  ctrlm_attr_general.h  ctrlm_attr_voice.cpp  ctrlm_attr_voice.h  ctrlm_version.cpp  ctrlm_version.h
src/auth/: ctrlm_auth.cpp  ctrlm_auth.h  ctrlm_auth_certificate.cpp  ctrlm_auth_certificate.h  ctrlm_auth_thunder.cpp  ctrlm_auth_thunder.h  ctrlm_hal_certificate.h  ctrlm_thunder_plugin_authservice.cpp  ctrlm_thunder_plugin_authservice.h
src/ble/: ctrlm_ble_controller.cpp  ctrlm_ble_controller.h  ctrlm_ble_controller_attr_version.cpp  ctrlm_ble_controller_attr_version.h  ctrlm_ble_iarm.cpp  ctrlm_ble_network.cpp  ctrlm_ble_network.h  ctrlm_ble_rcu_interface.cpp  ctrlm_ble_rcu_interface.h  ctrlm_ble_utils.cpp  ctrlm_ble_utils.h
src/config/: ctrlm_config.cpp  ctrlm_config.h  ctrlm_config_attr.cpp  ctrlm_config_attr.h  ctrlm_config_types.cpp  ctrlm_config_types.h
src/database/: ctrlm_database.cpp  ctrlm_database.h  ctrlm_db_attr.cpp  ctrlm_db_attr.h  ctrlm_db_types.cpp  ctrlm_db_types.h
src/factory/: CMakeLists.txt  ctrlm_fta_caa.h  ctrlm_fta_lib.h  ctrlm_fta_platform.h  ctrlmf_audio_capture.cpp  ctrlmf_audio_capture.h  ctrlmf_audio_control.cpp  ctrlmf_audio_playback.cpp  ctrlmf_audio_playback.h  ctrlmf_main.c  ctrlmf_mic_test.cpp  ctrlmf_reset.cpp  ctrlmf_systemd.c  ctrlmf_utils.c  ctrlmf_utils.h  ctrlmf_version.c  ctrlmf_ws.c  ctrlmf_ws.h
src/factory/iarm/: ctrlmf_iarm_client.cpp  ctrlmf_iarm_client.h  ctrlmf_iarm_control_manager.cpp  ctrlmf_iarm_control_manager.h
src/factory/thunder/: ctrlmf_thunder_controller.cpp  ctrlmf_thunder_controller.h  ctrlmf_thunder_plugin.cpp  ctrlmf_thunder_plugin.h  ctrlmf_thunder_plugin_control_manager.cpp  ctrlmf_thunder_plugin_control_manager.h  ctrlmf_thunder_plugin_system_audio_player.cpp  ctrlmf_thunder_plugin_system_audio_player.h
src/input_event/: ctrlm_input_event_writer.cpp  ctrlm_input_event_writer.h
src/ipc/: ctrlm_ipc_iarm.cpp  ctrlm_ipc_iarm.h  ctrlm_ipc_iarm_powermanager.cpp  ctrlm_ipc_iarm_powermanager.h  ctrlm_rcp_ipc_event.cpp  ctrlm_rcp_ipc_event.h  ctrlm_rcp_ipc_iarm_thunder.cpp  ctrlm_rcp_ipc_iarm_thunder.h
src/irdb/: ctrlm_irdb.cpp  ctrlm_irdb.h  ctrlm_irdb_factory.cpp  ctrlm_irdb_factory.h  ctrlm_irdb_interface.cpp  ctrlm_irdb_interface.h  ctrlm_irdb_plugin.h  ctrlm_irdb_stub.cpp  ctrlm_irdb_stub.h
src/network/: ctrlm_ir_rf_db.cpp  ctrlm_ir_rf_db.h  ctrlm_ir_rf_db_entry.cpp  ctrlm_ir_rf_db_entry.h
src/rf4ce/: ctrlm_rf4ce_controller.cpp  ctrlm_rf4ce_controller.h  ctrlm_rf4ce_device_update.cpp  ctrlm_rf4ce_discovery.cpp  ctrlm_rf4ce_indication.cpp  ctrlm_rf4ce_network.cpp  ctrlm_rf4ce_network.h  ctrlm_rf4ce_pairing.cpp  ctrlm_rf4ce_rcu.cpp  ctrlm_rf4ce_rib.cpp  ctrlm_rf4ce_utils.cpp  ctrlm_rf4ce_validation.cpp
src/rfc/: ctrlm_rfc.cpp  ctrlm_rfc.h  ctrlm_rfc_attr.cpp  ctrlm_rfc_attr.h
src/server/: CMakeLists.txt  ctrlm_fta_caa.h  ctrlm_fta_lib.h  ctrlm_server_app.h  ctrlm_server_platform.h  ctrlms_main.c  ctrlms_utils.c  ctrlms_utils.h  ctrlms_version.c  ctrlms_version.h  ctrlms_ws.c  ctrlms_ws.cpp  ctrlms_ws.h
src/shared_memory/: ctrlm_shared_memory.cpp  ctrlm_shared_memory.h
src/stubs/: stubs_hal_rf4ce.cpp  stubs_iarm.cpp  stubs_vendor_network_factory.cpp  stubs_voice_packet_analysis.cpp
src/telemetry/: ctrlm_telemetry.cpp  ctrlm_telemetry.h  ctrlm_telemetry_event.cpp  ctrlm_telemetry_event.h  ctrlm_telemetry_markers.h
src/thunder/: ctrlm_thunder_controller.cpp  ctrlm_thunder_log.h  ctrlm_thunder_plugin.cpp  ctrlm_thunder_plugin.h  ctrlm_thunder_plugin_powermanager.cpp  ctrlm_thunder_plugin_powermanager.h  ctrlm_thunder_plugin_system_audio_player.cpp  ctrlm_thunder_plugin_system_audio_player.h  ctrlm_thunder_powermanager.cpp  ctrlm_thunder_powermanager.h
src/tv_audio/: ctrlm_tv_audio_cap.cpp  ctrlm_tv_audio_cap.h
src/voice/: ctrlm_voice_obj.cpp  ctrlm_voice_obj.h  ctrlm_voice_obj_generic.cpp  ctrlm_voice_obj_generic.h  ctrlm_voice_types.h
(+191 files in other folders)
